--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                                             <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-b9ef68bd1afd5314e94c">
                                                                 <div class="sqs-block-content">
                                                                     <h2 id="-div-data-preserve-html-node-true-class-box-ace-race-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                        <div data-preserve-html-node="true" class="box">Ace Race<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                        <div data-preserve-html-node="true" class="box">Ace Race<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                                     </h2>
                                                                     <p style="display: none;"></p>
                                                                     <p data-preserve-html-node="true" style="display: none;">Ace Race is a three lap race around a big track full of shortcuts and pitfalls. Sprint, jump, and fly as fast as you can, and avoid obstacles to get the fastest time possible! </p>
@@ -625,7 +625,7 @@
                                                             <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-ea9c151c80a15601f01e">
                                                                 <div class="sqs-block-content">
                                                                     <h2 id="-div-data-preserve-html-node-true-class-box-battle-box-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                        <div data-preserve-html-node="true" class="box">Battle Box<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                        <div data-preserve-html-node="true" class="box">Battle Box<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                                     </h2>
                                                                     <p style="display: none;"></p>
                                                                     <p data-preserve-html-node="true" style="display: none;">An epic PvP-centric game that occurs over 9 rounds. Each team cycles round and plays against every other team in a 4v4 match up! Teams have 1 minute, and only 1 life to capture the centre objective before the other team.</p>
@@ -681,7 +681,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-4c94a15497c8eae0bb2a">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-big-sales-at-build-mart-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Big Sales at Build Mart<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Big Sales at Build Mart<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">A speed-building game that really tests communication and resource management! </p>
@@ -754,7 +754,7 @@
                                                             <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1629989195228_78961">
                                                                 <div class="sqs-block-content">
                                                                     <h2 id="-div-data-preserve-html-node-true-class-box-grid-runners-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                        <div data-preserve-html-node="true" class="box">Grid Runners<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                        <div data-preserve-html-node="true" class="box">Grid Runners<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                                     </h2>
                                                                     <p style="display: none;"></p>
                                                                     <p data-preserve-html-node="true" style="display: none;">This one is all about cooperation! Teams are catapulted into ten identical, parallel courses that contain challenge rooms that are perfectly designed to test players' communication, Minecraft skills, and speed.</p>
@@ -824,7 +824,7 @@
                                                             <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-25b810ccbc3428cbce38">
                                                                 <div class="sqs-block-content">
                                                                     <h2 id="-div-data-preserve-html-node-true-class-box-hole-in-the-wall-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                        <div data-preserve-html-node="true" class="box">Hole in the Wall<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                        <div data-preserve-html-node="true" class="box">Hole in the Wall<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                                     </h2>
                                                                     <p style="display: none;"></p>
                                                                     <p data-preserve-html-node="true" style="display: none;">The aim of the game is to stay alive for as long as you can while large walls of slime converge on you from all directions! Jump and thread your way through the walls without being pushed off the platform.</p>
@@ -887,7 +887,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1621950822203_88800">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-parkour-tag-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Parkour Tag<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Parkour Tag<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">Parkour Tag is a real test of skill! Not only do your focus and reaction times matter, you also need speed and spatial awareness to keep from getting tagged by your opponent!</p>
@@ -953,7 +953,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1627047994543_43993">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-sands-of-time-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Sands of Time<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Sands of Time<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">Sands of time is the most cryptic game in MCC. Teams enter their own dungeons and compete against the clock to collect as much hidden gold as they can. Keeping the timer topped up with sand is the only way for you to stay in the game. If you die, your team must sacrifice resources to revive you. Bank your gold by offering it to the sphinx for a fee, or keep every coin by leaving the dungeon. However, if you leave, you can't return.</p>
@@ -1007,7 +1007,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-68fc2cfcfa7c4c714ed6">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-sky-battle-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Sky Battle<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Sky Battle<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">Similar to Skyblockle and the classic Minecraft mini-game Skywars, Sky Battle is a fast-paced game designed to keep teams moving and trying new strategies! </p>
@@ -1063,7 +1063,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-94f2a03146fe71ac1e51">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-survival-games-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Survival Games<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Survival Games<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">It's the classic! Last team standing wins! All players are let free to roam the map, trying to become more powerful through finding equipment hidden in buildings, all while the map borders converge into the centre, forcing you to fight for survival.</p>
@@ -1133,7 +1133,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-ede2523d98f68130be90">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-tgttosawaf-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">TGTTOSAWAF<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">TGTTOSAWAF<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">The aim of To Get to the Other Side (and Whack a Fan) is obvious… The game plays out in six rounds across six different maps. All players start on one end of the map and are given various tools to assist them in getting to the other side. Once they've made it across, they must punch a fan (one of you!) to complete their goal!</p>
@@ -1204,7 +1204,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1648227771621_311401">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-rocket-spleef-rush-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Rocket Spleef Rush<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Rocket Spleef Rush<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">The aim of Rocket Spleef Rush is to stay alive for as long as possible. Fight to be the last player standing on floating platforms while barraging other players with rockets that destroy the blocks below. As the platforms crumble new ones will spawn in!</p>
@@ -1272,7 +1272,7 @@
                                                     <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1653671546553_46665">
                                                         <div class="sqs-block-content">
                                                             <h2 id="-div-data-preserve-html-node-true-class-box-meltdown-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                <div data-preserve-html-node="true" class="box">Meltdown<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                <div data-preserve-html-node="true" class="box">Meltdown<span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
                                                             <p data-preserve-html-node="true" style="display: none;">Meltdown is a frantic, 3 round Battle Royale where players must traverse a melting lab to rescue crates filled with coins.</p>
