--- a/index.html
+++ b/index.html
@@ -1790,7 +1790,7 @@
                             <div class="col sqs-col-12 span-12">
                                 <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1583229434666_48520">
                                     <div class="sqs-block-content">
-                                        <p style="text-align:center;white-space:pre-wrap;" class="">All credit for MCC goes to © DAASCrew Ltd. 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ</p>
+                                        <p style="text-align:center;white-space:pre-wrap;" class="">All credit for MCC goes to © Noxcrew Ltd. 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ</p>
                                     </div>
                                 </div>
                             </div>
