--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
                                                                 <div data-preserve-html-node="true" class="box">Who are the DAASCrew?<span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
                                                             </h2>
                                                             <p style="display: none;"></p>
-                                                            <p data-preserve-html-node="true" style="display: none;">DAASCrew is a company born from a group of MCC fans who have come together to create DAAS MCC. We started this journey back in 2021 and we have been slowly but surely recreating more and more games. Today, we've taken it to the next level and created the most immersive MCC recreation event ever. We love what we do and can't wait to host many more events!</p>
+                                                            <p data-preserve-html-node="true" style="display: none;">DAASCrew is a group of MCC fans who have come together to create DAAS MCC. We started this journey back in 2021 and we have been slowly but surely recreating more and more games. Today, we've taken it to the next level and created the most immersive MCC recreation event ever. We love what we do and can't wait to host many more events!</p>
                                                         </div>
                                                     </div>
                                                 </div>
