--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@
                                             <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-4fdffa1d663f86fb7480">
                                                 <div class="sqs-block-content">
                                                     <h2 style="text-align:center;white-space:pre-wrap;">Kenzie</h2>
-                                                    <p style="text-align:center;white-space:pre-wrap;" class="">Director</p>
+                                                    <p style="text-align:center;white-space:pre-wrap;" class="">Owner</p>
                                                 </div>
                                             </div>
                                         </div>
