--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
         <div class="Loader"></div>
         <div class="Mobile loaded" data-nc-base="mobile-bar" data-controller="AncillaryLayout" data-controllers-bound="AncillaryLayout">
             <div class="Mobile-bar Mobile-bar--top" data-nc-group="top" data-controller="MobileOffset" data-controllers-bound="MobileOffset">
-                <div data-nc-container="top-left">
-                </div>
+                <div data-nc-container="top-left"></div>
                 <div data-nc-container="top-center"></div>
                 <div data-nc-container="top-right">
                     <button class="Mobile-bar-menu" data-nc-element="menu-icon" data-controller-overlay="menu" data-controller="MobileOverlayToggle" data-controllers-bound="MobileOverlayToggle">
@@ -1414,7 +1413,7 @@
                                                             <div class="sqs-block markdown-block sqs-block-markdown" data-block-type="44" id="block-yui_3_17_2_1_1653671546553_92342">
                                                                 <div class="sqs-block-content">
                                                                     <h2 id="-div-data-preserve-html-node-true-class-box-the-finale-b-data-preserve-html-node-true-dodgebolt-b-span-data-preserve-html-node-true-style-text-align-right-float-right-span-div-" style="cursor: pointer;">
-                                                                        <div data-preserve-html-node="true" class="box">The finale: <b data-preserve-html-node="true">Dodgebolt</b><span data-preserve-html-node="true" style="text-align:right; float: right;"></span></div>
+                                                                        <div data-preserve-html-node="true" class="box">The finale: <b data-preserve-html-node="true">Dodgebolt</b><span data-preserve-html-node="true" style="text-align:right; float: right;">↓</span></div>
                                                                     </h2>
                                                                     <p style="display: none;"></p>
                                                                     <p data-preserve-html-node="true" style="display: none;">Dodgebolt is the final duel, and is not available on the Decision Dome. It's an elimination game where the aim is to remain as the last team standing. Dodgebolt is played as a best of five, and the first team to reach three wins will become the MCC event winners!</p>
