--- a/index.html
+++ b/index.html
@@ -1572,7 +1572,7 @@
                                                                             overflow: hidden;
                                                                             " id="yui_3_17_2_1_1664566753130_714">
                                                                             <noscript><img src="https://images.squarespace-cdn.com/content/v1/5971ce3b15d5dbd23f753394/1583328260052-PBFM8P3O31UA2R0DTVYX/IMG_20190927_214004_3.jpg" alt="" /></noscript>
-                                                                            <img class="thumb-image loaded" data-src="https://images.squarespace-cdn.com/content/v1/5971ce3b15d5dbd23f753394/1583328260052-PBFM8P3O31UA2R0DTVYX/IMG_20190927_214004_3.jpg" data-image="https://images.squarespace-cdn.com/content/v1/5971ce3b15d5dbd23f753394/1583328260052-PBFM8P3O31UA2R0DTVYX/IMG_20190927_214004_3.jpg" data-image-dimensions="1594x1594" data-image-focal-point="0.5,0.5" alt="" data-load="false" data-image-id="60aba7db09b5034ddc689269" data-type="image" style="left: 0%; top: 0%; width: 100%; height: 100%; position: absolute;" data-image-resolution="300w" src="img/grphxx.png">
+                                                                            <img class="thumb-image loaded" data-src="https://images.squarespace-cdn.com/content/v1/5971ce3b15d5dbd23f753394/1583328260052-PBFM8P3O31UA2R0DTVYX/IMG_20190927_214004_3.jpg" data-image="https://images.squarespace-cdn.com/content/v1/5971ce3b15d5dbd23f753394/1583328260052-PBFM8P3O31UA2R0DTVYX/IMG_20190927_214004_3.jpg" data-image-dimensions="1594x1594" data-image-focal-point="0.5,0.5" alt="" data-load="false" data-image-id="60aba7db09b5034ddc689269" data-type="image" style="left: 0%; top: 0%; width: 100%; height: 100%; position: absolute;" data-image-resolution="300w" src="img/troll.png">
                                                                         </div>
                                                                     </div>
                                                                 </figure>
@@ -1581,8 +1581,8 @@
                                                     </div>
                                                     <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-62b35a9d4290fe51ab50">
                                                         <div class="sqs-block-content">
-                                                            <h2 style="text-align:center;white-space:pre-wrap;">Grphxx</h2>
-                                                            <p style="text-align:center;white-space:pre-wrap;" class="">Founder</p>
+                                                            <h2 style="text-align:center;white-space:pre-wrap;">Trolliant</h2>
+                                                            <p style="text-align:center;white-space:pre-wrap;" class="Videographer"></p>
                                                         </div>
                                                     </div>
                                                 </div>
