--- a/index.html
+++ b/index.html
@@ -1582,7 +1582,7 @@
                                                     <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-62b35a9d4290fe51ab50">
                                                         <div class="sqs-block-content">
                                                             <h2 style="text-align:center;white-space:pre-wrap;">Trolliant</h2>
-                                                            <p style="text-align:center;white-space:pre-wrap;" class="Videographer"></p>
+                                                            <p style="text-align:center;white-space:pre-wrap;" class="">Videographer</p>
                                                         </div>
                                                     </div>
                                                 </div>
