--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:image" content="http://static1.squarespace.com/static/5971ce3b15d5dbd23f753394/t/638f92ad20894e23e7951f66/1670353588328/Alpha+-+Monogram+Initials+w+Crown+809x809.png?format=1500w">
         <meta property="og:image:width" content="809">
         <meta property="og:image:height" content="809">
-        <meta itemprop="name" content="Noxcrew | MC Championship">
+        <meta itemprop="name" content="DAASCrew | DAAS Championship">
         <meta itemprop="url" content="https://daasmcc.com">
         <meta itemprop="description" content="40 popular streamers compete in a monthly Minecraft tournament, showcasing their skills in a variety of challenges.">
         <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/5971ce3b15d5dbd23f753394/t/638f92ad20894e23e7951f66/1670353588328/Alpha+-+Monogram+Initials+w+Crown+809x809.png?format=1500w">
